ReflectionClassPathAppender on Java 16+